# Kursovaya_3

./: README.md  pyproject.toml
grup/: function.py
src/: function.py  main.py
tests/: test_main.py
