[tool.poetry]
name = "kursovaya-3"
version = "0.1.0"
description = ""
authors = ["Purenkov Alex <www.wolk94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
